# onetwo

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
agents/: base.py  base_test.py  critics_test.py  distribution.py  distribution_test.py  game_of_24.py  react.py  react_test.py  test_utils_test.py
backends/: gemini_api_manual_tests.py  gemma.py  gemma_test.py  test_utils.py
builtins/: base.py  base_test.py  callbacks.py  callbacks_test.py  composables.py  composables_test.py  llm.py
colabs/: getting_started.ipynb  rag_tutorial.ipynb  tutorial.ipynb
colabs/images/: README.md  image_provenance.py
core/: batching.py  caching.py  composing.py  composing_test.py  constants.py  content.py  executing.py  executing_test.py  executing_with_context.py  executing_with_context_test.py  iterating.py  iterating_test.py  routing.py  routing_test.py  sampling_test.py  templating_test.py  tracing.py  tracing_test.py  updating.py  updating_test.py  utils.py
docs/: basics.md  faq.md
onetwo/: __init__.py  evaluation.py  evaluation_test.py  ot.py  version.py
onetwo/agents/: agents_base.py  agents_base_test.py  agents_test_utils.py  agents_test_utils_test.py  critics.py  critics_test.py  distribution.py  distribution_test.py  game_of_24_test.py  iterative_thought.py  iterative_thought_test.py  optimization.py  optimization_test.py  python_planning.py  python_planning_test.py  react.py  react_test.py  test_utils.py
onetwo/backends/: backends_base.py  backends_test_utils.py  base.py  formatters.py  formatters_test.py  gemini_api.py  gemini_api_manual_tests.py  gemini_api_test.py  gemma_local.py  gemma_local_test.py  google_genai_api.py  google_genai_api_manual_tests.py  google_genai_api_test.py  model_server.py  onetwo_api.py  onetwo_api_manual_test.py  onetwo_api_test_script.sh  openai_api.py  openai_api_manual_tests.py  openai_api_test.py  openai_mock.py  run_model_server.py  test_utils.py  vertexai_api.py  vertexai_api_manual_tests.py  vertexai_api_test.py
onetwo/builtins/: builtins_base.py  builtins_base_test.py  callbacks.py  callbacks_test.py  composables.py  composables_test.py  formatting.py  formatting_test.py  llm.py  llm_test.py  llm_utils.py  llm_utils_test.py  prompt_templating.py  prompt_templating_test.py  tool_use.py  tool_use_test.py
onetwo/core/: base_interfaces.py  batching.py  batching_test.py  cached_backends.py  caching.py  utils.py  (+31 more)
(+61 files in other folders)
